# boost_processes

./: .gitignore  CMakeLists.txt  README.md
boost/processes/: command_line.hpp  nexus.hpp  processes.hpp  scheduler.hpp  structures.hpp  windows.hpp
libs/: CMakeLists.txt
libs/processes/: CMakeLists.txt
libs/processes/test/: CMakeLists.txt  tests.cpp
